--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "pages": [
-    "pages/index/index",
-    "pages/profile/profile"
+    "pages/profile/profile",
+    "pages/index/index"
   ],
   "window": {
     "navigationStyle": "custom",
