--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
   "pages": [
+    "subpackages-music/pages/music-play/music-play",
     "subpackages-search/pages/search-result/search-result",
     "subpackages-song-list/pages/song-list-detail/song-list-detail",
     "pages/sub-pages/profile-detail/profile-detail",
-    
     "pages/index/index",
     "pages/profile/profile",
     "subpackages-search/pages/search/search"
