--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
   "pages": [
+    "pages/index/index",
     "pages/profile/profile",
     "subpackages-comment/pages/profile-comment/profile-comment",
     "subpackages-comment/pages/comment/comment",
     "pages/sub-pages/profile-detail/profile-detail",
-    "pages/index/index",
     "subpackages-login/pages/login/login",
     "subpackages-payment/pages/payment/payment",
     "subpackages-music/pages/music-play/music-play",
@@ -14,7 +14,8 @@
     "subpackages-search/pages/batch-action-page/batch-action-page",
     "pages/sub-pages/edit-music-list/edit-music-list",
     "pages/sub-pages/batch-music-list/batch-music-list",
-    "pages/sub-pages/editor-base-info/editor-base-info"
+    "pages/sub-pages/editor-base-info/editor-base-info",
+    "pages/sub-pages/index-more/index-more"
   ],
   "window": {
     "navigationStyle": "custom",
